--- a/CreateMapping.Tests/CreateMapping.Tests.csproj
+++ b/CreateMapping.Tests/CreateMapping.Tests.csproj
@@ -12,4 +12,14 @@
   <ItemGroup>
     <ProjectReference Include="..\CreateMapping\CreateMapping.csproj" />
   </ItemGroup>
+  <ItemGroup>
+  <Content Include="..\docs\CaseMigrant.sql">
+      <Link>docs\CaseMigrant.sql</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  <Content Include="..\docs\m360_case_csv.csv">
+      <Link>docs\m360_case_csv.csv</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
