--- a/appsettings.sample.json
+++ b/appsettings.sample.json
@@ -1,29 +1,12 @@
 {
+  "_comment": "Sample configuration. Copy to appsettings.json and/or use user-secrets. Only Ai section is needed for optional Azure OpenAI mapping suggestions.",
   "Ai": {
     "Enabled": true,
-    "Endpoint": "https://your-azure-openai-endpoint.openai.azure.com/",
-    "ApiKey": "your-api-key-here",
-    "Deployment": "gpt-4",
+    "Endpoint": "https://your-azure-openai-resource.openai.azure.com/",
+    "ApiKey": "<SET-IN-USER-SECRETS>",
+    "Deployment": "gpt-4o-mini", 
     "Temperature": 0.2,
     "RetryCount": 2,
     "LogRaw": false
-  },
-  "Ai_Reasoning": {
-    "_comment": "Configuration for reasoning models like o1-preview, o1-mini",
-    "Enabled": true,
-    "Endpoint": "https://your-azure-openai-endpoint.openai.azure.com/",
-    "ApiKey": "your-api-key-here",
-    "Deployment": "o1-preview",
-    "RetryCount": 2,
-    "LogRaw": false,
-    "_note": "Temperature is not used with reasoning models"
-  },
-  "Dataverse": {
-    "Url": "https://your-org.crm.dynamics.com/",
-    "Username": "your-dataverse-user@domain.com",
-    "Password": "your-password-or-set-via-environment"
-  },
-  "SqlServer": {
-    "ConnectionString": "Server=your-server;Database=your-db;Integrated Security=true;"
   }
 }
