Refactor code structure for improved readability and maintainability

--- a/CreateMapping/appsettings.json
+++ b/CreateMapping/appsettings.json
@@ -5,7 +5,7 @@
   },
   "Ai": {
     "Enabled": true,
-    "Endpoint": "https://your-azure-openai-resource.openai.azure.com/",
+    "Endpoint": "https://madhu-mdpm86as-eastus2.cognitiveservices.azure.com/",
     "ApiKey": "<SET-VIA-USER-SECRETS>",
     "Deployment": "gpt-4o-mini",
     "Temperature": 0.2,
