--- a/appsettings.sample.json
+++ b/appsettings.sample.json
@@ -6,7 +6,8 @@
     "ApiKey": "<SET-IN-USER-SECRETS>",
     "Deployment": "gpt-4o-mini", 
     "Temperature": 0.2,
-    "RetryCount": 2,
-    "LogRaw": false
+  "RetryCount": 2,
+  "LogRaw": false,
+  "LogRequest": false
   }
 }
