--- a/CreateMapping/CreateMapping.csproj
+++ b/CreateMapping/CreateMapping.csproj
@@ -19,6 +19,7 @@
   <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.15" />
   </ItemGroup>
 
   <ItemGroup>
