--- a/CreateMapping/appsettings.json
+++ b/CreateMapping/appsettings.json
@@ -7,7 +7,7 @@
     "Enabled": true,
     "Endpoint": "https://madhu-mdpm86as-eastus2.cognitiveservices.azure.com/",
     "ApiKey": "<SET-VIA-USER-SECRETS>",
-    "Deployment": "gpt-4o-mini",
+    "Deployment": "gpt-5-chat",
     "Temperature": 0.2,
     "RetryCount": 2,
     "LogRaw": false
